# GM-Simulator

./: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  readme.md
app/: main.py  seed.py
app/routers/: contracts.py  depth.py  games.py  standings.py  transactions.py
app/services/: contracts.py  draft.py  elo.py  llm.py  ratings.py  sim.py  trades.py
data/: jj_chart.csv
data/seed/: depth_chart.csv  teams.csv
docs/: PROJECT_OVERVIEW.md
gm-sim/: .env  OVERNIGHT_REPORT.md  PRIMER.md  PROJECT_STATUS.md  README.md  app.db  debug_height.py  pyproject.toml  pytest.ini  requirements.txt  run_full_scraper.py  scrape_espn_rosters.py  scrape_nfl_com.py  scrape_nfl_quick.py  test_alternative_scraper.py  test_dallas_fixed.csv  test_fixed_height.py  test_fixed_nfl.py  test_nfl_parsing.py  test_pfr_scraper.py  test_seed.py  test_simple.py
gm-sim/app/: db.py  main.py  models.py  schemas.py  seed.py  seed_safe.py
gm-sim/app/routers/: __init__.py  assistant.py  coaching.py  contracts.py  depth.py  development.py  draft.py  franchise.py  games.py  health.py  injuries.py  picks.py  players.py  playoffs.py  roster.py  seasons.py  standings.py  stats.py  teams.py  trades.py  transactions.py
gm-sim/app/services/: analytics.py  coaching.py  contracts.py  development.py  draft.py  elo.py  free_agency.py  highlights.py  injuries.py  llm.py  pbp.py  persistence.py  playoffs.py  rating_blender.py  ratings.py  ratings_loader.py  roster_rules.py  season.py  sim.py  state.py  trade_ai.py  trades.py
gm-sim/data/: free_agents.json
gm-sim/data/ratings/: madden25_sample.csv  pff_sample.csv
gm-sim/data/seed/: contracts.csv  picks.csv  players_nfl.csv  players_quick.csv
gm-sim/docs/: API_GUIDE.md  PROJECT_OVERVIEW.md
gm-sim/frontend/: index.html
gm-sim/saves/: test_backup.json
gm-sim/scripts/: blend_ratings.py  import_pbp.py
gm-sim/tests/: test_integration.py
gm-sim/tests/api/: test_assistant.py  test_coaching.py  test_contracts.py  test_draft.py  test_games_frontend.py  test_injuries.py  test_players.py  test_playoffs.py  test_quickstart.py  test_roster.py  test_roster_rules.py  test_stats.py  test_transactions.py
gm-sim/tests/services/: test_analytics.py  test_coaching_system.py  test_free_agency.py  test_llm.py  test_narrative_grounding.py  test_pbp.py  test_playoff_simulator.py  test_rating_blender.py  test_season_simulator.py  test_state_store.py
tests/api/: test_games.py  test_health.py  test_players.py
tests/services/: test_contract_financials.py  test_injury_engine.py  test_ratings_loader.py
