[tool.poetry]
name = "gm-sim"
version = "0.1.0"
description = "Minimal NFL GM Simulator Backend"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = "^2.0.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
aiosqlite = "^0.21.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
pandas = "^2.0.0"
lxml = "^4.9.0"
httpx = "^0.28.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"

[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["app.*"]
ignore_errors = true

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501", "E722", "F401", "F541", "F841"]

[tool.ruff.lint.per-file-ignores]
"test_seed.py" = ["E722", "F401", "F841"]
"test_simple.py" = ["F401"]
"test_alternative_scraper.py" = ["F401"]
"test_fixed_height.py" = ["F401"]
"test_fixed_nfl.py" = ["F401"]
"test_nfl_parsing.py" = ["F401"]
"test_pfr_scraper.py" = ["F401", "F821"]

[tool.black]
line-length = 100
target-version = ["py311"]
extend-exclude = '''
(
    ^/test_.*\.py|
    ^/scrape_.*\.py|
    ^/run_full_scraper\.py|
    ^/debug_height\.py
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
