[tool.poetry]
name = "gm-sim"
version = "0.1.0"
description = "Minimal NFL GM Simulator Backend"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = "^2.0.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
aiosqlite = "^0.19.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.0"
pandas = "^2.2.0"
requests = "^2.32.0"
beautifulsoup4 = "^4.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
